PACKAGE=dbusService
VERSION="0.1.0"

AC_INIT(PACKAGE, VERSION)
AC_CONFIG_SRCDIR(src/main.c)
AM_INIT_AUTOMAKE

AC_PROG_CC
AM_PROG_CC_C_O

PKG_CHECK_MODULES(GIO, [gio-2.0 >= 2.26.0])
PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 gio-2.0 >= $GIO_REQUIRED gio-unix-2.0)

AC_OUTPUT(Makefile src/Makefile)
