bin_PROGRAMS = dratkeService dbusServer gdbusexamplepeer ownname

dratkeService_LDADD = $(GIO_LIBS)
dratkeService_CFLAGS = $(GIO_CFLAGS)
dratkeService_SOURCES = dratkeService.c


dbusServer_LDADD = $(GIO_LIBS)
dbusServer_CFLAGS = $(GIO_CFLAGS)
dbusServer_SOURCES = dbusServer.c

gdbusexamplepeer_LDADD = $(GIO_LIBS)
gdbusexamplepeer_CFLAGS = $(GIO_CFLAGS)
gdbusexamplepeer_SOURCES = gdbusexamplepeer.c

ownname_LDADD = $(GIO_LIBS)
ownname_CFLAGS = $(GIO_CFLAGS)
ownname_SOURCES = ownname.c

