#bin_PROGRAMS = dratkeService dbusServer gdbusexamplepeer ownname dbusService
bin_PROGRAMS = dratkeService dbusServer gdbusexamplepeer dbusService newService
#bin_PROGRAMS = gdbusexampleserver

dratkeService_LDADD = $(GIO_LIBS)
dratkeService_CFLAGS = $(GIO_CFLAGS)
dratkeService_SOURCES = dratkeService.c


dbusServer_LDADD = $(GIO_LIBS)
dbusServer_CFLAGS = $(GIO_CFLAGS)
dbusServer_SOURCES = dbusServer.c

gdbusexamplepeer_LDADD = $(GIO_LIBS)
gdbusexamplepeer_CFLAGS = $(GIO_CFLAGS)
gdbusexamplepeer_SOURCES = gdbusexamplepeer.c

ownname_LDADD = $(GIO_LIBS)
ownname_CFLAGS = $(GIO_CFLAGS)
ownname_SOURCES = ownname.c

dbusService_LDADD = $(GIO_LIBS)
dbusService_CFLAGS = $(GIO_CFLAGS)
dbusService_SOURCES = dbusService.c

newService_LDADD = $(GIO_LIBS)
newService_CFLAGS = $(GIO_CFLAGS)
newService_SOURCES = newService.c

gdbusexampleserver_LDADD = $(GIO_LIBS)
gdbusexampleserver_CFLAGS = $(GIO_CFLAGS)
gdbusexampleserver_SOURCES = gdbus-example-server.c

